[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/booster-pack.png" type="Texture" id=1]
[ext_resource path="res://scripts/packages.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.341176, 0.341176, 0.341176, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.192157, 0.192157, 0.192157, 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.231373, 0.231373, 0.231373, 1 )

[sub_resource type="StyleBoxFlat" id=12]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.568627, 0.00784314, 0.00784314, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.356863, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.517647, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="packages" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 5
size_flags_vertical = 5
script = ExtResource( 3 )

[node name="idea" type="Sprite" parent="."]
visible = false
position = Vector2( 500, 283 )
scale = Vector2( 0.856712, 0.837963 )
texture = ExtResource( 1 )

[node name="windowMain" type="VBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="menu" type="HBoxContainer" parent="windowMain"]
margin_right = 1024.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )

[node name="back" type="Button" parent="windowMain/menu"]
margin_bottom = 50.0
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/normal = SubResource( 11 )

[node name="Label" type="Label" parent="windowMain/menu/back"]
margin_right = 60.0
margin_bottom = 25.0
text = "Back"
align = 1
valign = 1

[node name="spacer" type="HBoxContainer" parent="windowMain/menu"]
margin_left = 4.0
margin_right = 979.0
margin_bottom = 50.0
size_flags_horizontal = 3

[node name="points" type="Label" parent="windowMain/menu"]
margin_left = 983.0
margin_top = 18.0
margin_right = 1024.0
margin_bottom = 32.0
text = "320 Pt"

[node name="mainScreen" type="HBoxContainer" parent="windowMain"]
margin_top = 54.0
margin_right = 1024.0
margin_bottom = 566.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Spacer" type="HBoxContainer" parent="windowMain/mainScreen"]
margin_right = 20.0
margin_bottom = 512.0
rect_min_size = Vector2( 20, 0 )
size_flags_vertical = 3

[node name="scrollWrapper" type="ScrollContainer" parent="windowMain/mainScreen"]
margin_left = 24.0
margin_right = 1000.0
margin_bottom = 512.0
rect_min_size = Vector2( 900, 500 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/bg = SubResource( 12 )

[node name="packageHolder" type="GridContainer" parent="windowMain/mainScreen/scrollWrapper"]
custom_constants/vseparation = 21
custom_constants/hseparation = 90
columns = 4

[node name="Spacer2" type="HBoxContainer" parent="windowMain/mainScreen"]
margin_left = 1004.0
margin_right = 1024.0
margin_bottom = 512.0
rect_min_size = Vector2( 20, 0 )
size_flags_vertical = 3

[node name="Spacer" type="VBoxContainer" parent="windowMain"]
margin_top = 570.0
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 30 )

[node name="overlay" type="CenterContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="resultWindow" type="Panel" parent="overlay"]
visible = false
margin_left = 224.0
margin_top = 100.0
margin_right = 799.0
margin_bottom = 500.0
rect_min_size = Vector2( 575, 400 )

[node name="close" type="Button" parent="overlay/resultWindow"]
margin_left = 560.0
margin_top = -10.0
margin_right = 585.0
margin_bottom = 15.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 8 )

[node name="Label" type="Label" parent="overlay/resultWindow/close"]
margin_right = 25.0
margin_bottom = 25.0
text = "X"
align = 1
valign = 1

[node name="scrollWrapper" type="ScrollContainer" parent="overlay/resultWindow"]
margin_left = 20.0
margin_top = 20.0
margin_right = 550.0
margin_bottom = 472.0

[node name="cardHolder" type="GridContainer" parent="overlay/resultWindow/scrollWrapper"]
custom_constants/vseparation = 19
custom_constants/hseparation = 19
columns = 3

[connection signal="pressed" from="windowMain/menu/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="overlay/resultWindow/close" to="." method="_on_close_pressed"]
